--- a/ant-back/src/main/resources/templates/welcome.html
+++ b/ant-back/src/main/resources/templates/welcome.html
@@ -28,6 +28,12 @@
                 <tr>
                     <th>系 统 开 发 中 ......</th>
                 </tr>
+                <tr>
+                    <th>2018年9月16日更新：增加删除用户时同时删除用户关联的角色信息，删除角色也一样。限制删除admin用户和admin角色</th>
+                </tr>
+                <tr>
+                    <th>下一版本：添加动态定时器</th>
+                </tr>
                 </tbody>
             </table>
         </div>
