优化提示信息

--- a/ant-back/src/main/resources/templates/system/role-index.html
+++ b/ant-back/src/main/resources/templates/system/role-index.html
@@ -117,7 +117,7 @@
                                 layer.msg("操作成功");
                                 document.getElementById("reloadBtn").click();
                             }else{
-                                layer.msg("操作失败");
+                                layer.msg(result.msg);
                             }
                         },
                         error: function () {
@@ -136,7 +136,7 @@
                                 layer.msg("操作成功");
                                 document.getElementById("reloadBtn").click();
                             }else{
-                                layer.msg("操作失败");
+                                layer.msg(result.msg);
                             }
                         },
                         error: function () {
