优化项目，添加切面，对controller进行日志记录

--- a/ant-back/src/main/resources/templates/system/params-index.html
+++ b/ant-back/src/main/resources/templates/system/params-index.html
@@ -40,9 +40,9 @@
         <thead>
         <tr>
             <th lay-data="{fixed: 'left', width:80,align:'center', templet: '#indexTemplet'}">序号</th>
-            <th lay-data="{field:'name'}">名称</th>
-            <th lay-data="{field:'key'}">KEY值</th>
-            <th lay-data="{field:'value',edit:'text'}">VALUE值</th>
+            <th lay-data="{field:'name',align:'center'}">名称</th>
+            <th lay-data="{field:'key',align:'center'}">KEY值</th>
+            <th lay-data="{field:'value',edit:'text',align:'center'}">VALUE值</th>
             <th lay-data="{field:'remark', width:300}">说明</th>
         </tr>
         </thead>
