--- a/ant-back/src/main/resources/templates/system/permission-index.html
+++ b/ant-back/src/main/resources/templates/system/permission-index.html
@@ -34,12 +34,12 @@
             <tr>
                 <th>层级</th>
                 <th>编码</th>
-                <th>图标</th>
-                <th>名称</th>
-                <th>排序</th>
+                <th style="text-align: center">图标</th>
+                <th style="text-align: center">名称</th>
+                <th style="text-align: center">排序</th>
                 <th>访问路径</th>
-                <th>状态</th>
-                <th>操作</th>
+                <th style="text-align: center">状态</th>
+                <th style="text-align: center">操作</th>
             </tr>
         </thead>
         <tbody>
@@ -89,7 +89,6 @@
             isPadding:true,
             clickableNodeNames:true
         });
-
     })
 </script>
 </body>
