--- a/ant-back/src/main/resources/templates/welcome.html
+++ b/ant-back/src/main/resources/templates/welcome.html
@@ -32,6 +32,9 @@
                     <th>2018年9月16日更新：增加删除用户时同时删除用户关联的角色信息，删除角色也一样。限制删除admin用户和admin角色</th>
                 </tr>
                 <tr>
+                    <th>2018年9月17日更新：AOP切面，对controller层，rest层进行日志记录，暂时只记录LOG，没有保存数据库</th>
+                </tr>
+                <tr>
                     <th>下一版本：添加动态定时器</th>
                 </tr>
                 </tbody>
