--- a/ant-back/src/main/resources/templates/welcome.html
+++ b/ant-back/src/main/resources/templates/welcome.html
@@ -35,6 +35,9 @@
                     <th>2018年9月17日更新：AOP切面，对controller层，rest层进行日志记录，暂时只记录LOG，没有保存数据库</th>
                 </tr>
                 <tr>
+                    <th>2018年9月18日更新：添加logback配置</th>
+                </tr>
+                <tr>
                     <th>下一版本：添加动态定时器</th>
                 </tr>
                 </tbody>
